Fixed white space in announcement links

--- a/site_files/app/themes/sass/partials/_boxyframe/frontend-structure.sass
+++ b/site_files/app/themes/sass/partials/_boxyframe/frontend-structure.sass
@@ -227,8 +227,12 @@ div#announcements
   position: relative
   width: 980px
 
+  a
+    display: block
+     
   a:hover
     border: none
+    display: block
 
 
 div.announcement-tail
