--- a/site_files/app/themes/sass/partials/_fancynancy/frontend-structure.sass
+++ b/site_files/app/themes/sass/partials/_fancynancy/frontend-structure.sass
@@ -240,8 +240,12 @@ div#announcements
   position: relative
   overflow: hidden
 
+  a
+    display: block
+    
   a:hover
     border: none
+    display: block
 
 
 div.announcement-tail
