--- a/site_files/app/themes/sass/partials/_hill/frontend-structure.sass
+++ b/site_files/app/themes/sass/partials/_hill/frontend-structure.sass
@@ -252,8 +252,12 @@ div#announcements
   margin: 20px 0
   width: 1000px
 
+  a
+    display: block
+  
   a:hover
     border: none
+    display: block
 
 
 div.announcement-tail
