--- a/site_files/app/themes/sass/partials/_pills/frontend-structure.sass
+++ b/site_files/app/themes/sass/partials/_pills/frontend-structure.sass
@@ -202,8 +202,12 @@ div#announcements
   overflow: hidden
   position: relative
 
+  a
+    display: block
+  
   a:hover
     border: none
+    display: block
 
 
 div.announcement-tail
