--- a/site_files/app/themes/sass/partials/_redsign/frontend-structure.sass
+++ b/site_files/app/themes/sass/partials/_redsign/frontend-structure.sass
@@ -231,8 +231,12 @@ div#announcements
   top: 20px
   width: 730px
 
+  a
+    display: block
+
   a:hover
     border: none
+    display: block
 
 
 div.announcement-tail
