--- a/site_files/app/themes/sass/partials/_tidypresent/frontend-structure.sass
+++ b/site_files/app/themes/sass/partials/_tidypresent/frontend-structure.sass
@@ -214,8 +214,12 @@ div#announcements
   position: relative
   width: 940px
 
+  a
+    display: block
+
   a:hover
     border: none
+    display: block
 
 
 div.announcement-tail
